# ros3-wall-e

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .gitignore  .gitmodules  CONVENTIONS.md  Makefile  Readme.md  package_list.txt
backup/: Package.list
backup/sources.list.d/: ros2.list
docs/: Conventions.md  TLDR.md  audio.md  behaviors.md  conventions.md  eve-protokoll.md  firmware_update.md  hardware_setup.md  installation.md  power.md  servo_2040.md  wall_e_web.md
install/: local_setup.sh  setup.sh
install/motor_controller/lib/motor_controller/: motor_controller_node
install/motor_controller/share/motor_controller/: package.sh  package.xml
install/servo_2040/lib/servo_2040/: serial_listener
install/servo_2040/share/servo_2040/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/servo_2040/share/servo_2040/launch/: all_launch.py
install/wall_e_launch/share/ament_index/resource_index/parent_prefix_path/: wall_e_launch
install/wall_e_launch/share/wall_e_launch/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wall_e_launch/share/wall_e_launch/launch/: all_nodes.launch.py
install/wall_e_web/lib/wall_e_web/: serve_web
install/wall_e_web/share/wall_e_web/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
scripts/: backup.sh  backup_to_github.sh  restore.sh
src/audio/: package.xml  setup.py
src/audio/audio/: audio_node.py
src/eyes/: package.xml  setup.py
src/eyes/firmware/: CMakeLists.txt  Makefile  README.md  display.cpp  display.h  lv_conf.h  main.c  main.cpp  pico_sdk_import.cmake  wall-e_eye.ino
src/eyes/firmware/examples/: CMakeLists.txt
src/eyes/firmware/examples/inc/: LCD_test.h  LVGL_example.h
src/eyes/firmware/examples/src/: LCD_1in28_LVGL_test.c  LVGL_example.c
src/eyes/firmware/lib/Display/: CMakeLists.txt  Display.c  Display.h
src/eyes/firmware/scripts/: convert_image.py
src/eyes/firmware/uf2/: RP2040-LCD-1.28.uf2
src/eyes/resource/: eyes
src/eyes/scripts/: flash_firmware.py
src/motor_controller/: setup.py
src/motor_controller/motor_controller/: motor_controller_node.py
src/power/: package.xml  setup.cfg  setup.py
src/power/power/: power_monitor.py
src/servo_2040/: setup.cfg  setup.py
src/servo_2040/firmware/: .gitignore  CMakeLists.txt  main.c  main.cpp  main.py
src/servo_2040/firmware/c_version/: CMakeLists.txt  main.c
src/servo_2040/scripts/: flash_c_firmware.py  flash_firmware.py  upload_firmware.py  upload_main.py
src/servo_2040/servo_2040/: joy_servo_controller.py  protocol.py  serial_listener.py  servo_2040.py
src/sound/: package.xml  setup.cfg  setup.py
src/teleop_twist_joy/config/: teleop_twist_joy.yaml
src/tracks/: package.xml  setup.cfg  setup.py
src/tracks/firmware/: CMakeLists.txt  flash_neopixel.c  main.c  micro_ros_task.c  pico_micro_ros_example.c  pico_uart_transport.c  ws2812.pio.c  ws2812.pio.h
src/tracks/firmware/libraries/Adafruit_NeoPixel/: Adafruit_NeoPixel.h
src/tracks/scripts/: flash_firmware.py
src/wall_e_launch/: CMakeLists.txt  setup.py
src/wall_e_launch/launch/: all_nodes.launch.py
src/wall_e_web/: package.xml  setup.cfg  setup.py
src/wall_e_web/launch/: all_launch.py  rosbridge_launch.py
src/wall_e_web/wall_e_web/: serve_web.py
src/wall_e_web/web/: index.html  package.json  pnpm-lock.yaml
